--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,20 @@
 {
-  "name": "backend",
+  "name": "tests",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/molokochris/node-employee-app.git"
-  },
-  "author": "MC Poopedi",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/molokochris/node-employee-app/issues"
-  },
-  "homepage": "https://github.com/molokochris/node-employee-app#readme",
   "dependencies": {
+    "cjs": "^0.0.11",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemailer": "^6.9.6"
+    "firebase-admin": "^11.11.0",
+    "nodemon": "^3.0.1"
   }
 }
